update get time delivery
